--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TypeScript: Hello, World!</title>
+    <title>Urban stroll</title>
 </head>
 <body>
     <script src="dist/app.js"></script>
+    <p id="location">Location</p>
+    <p id="orientation">Orientation</p>
 </body>
 </html>
