--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Urban stroll</title>
 </head>
 <body>
-    <script src="dist/app.js"></script>
+    <script type="module" src="dist/app.js"></script>
     <p id="location">Location</p>
     <p id="orientation">Orientation</p>
 </body>
