--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,6 @@
     <script type="module" src="dist/app.js"></script>
     <p id="location">Location</p>
     <p id="orientation">Orientation</p>
+    <button id="button">Go</button>
 </body>
 </html>
