add the experimentService which reads mouse X

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,6 @@
     <p id="location">Location</p>
     <p id="orientation">Orientation</p>
     <button id="button">Go</button>
+    <p id="experiment">Experiment</p>
 </body>
 </html>
