use webpack to bundle up the code

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -6,7 +6,7 @@
     <title>Urban stroll</title>
 </head>
 <body>
-    <script type="module" src="dist/app.js"></script>
+    <script type="module" src="stroll.js"></script>
     <p id="location">Location</p>
     <p id="orientation">Orientation</p>
     <button id="button">Go</button>
