use single scheduler; move debug code out of orientationservice

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -12,8 +12,7 @@
     <script type="module" src="stroll.js"></script>
     <p>
         <button id="button">Go</button>
-        <span id="orientation">Orientation</span>,
-        <span id="location">Location</span>
+        <span id="debug">👈 tap Go to begin</span>
     </p>
     <div id="map" style="height: 300px"></div>
     <p id="experiment"></p>
