--- a/src/static/index.html
+++ b/src/static/index.html
@@ -14,6 +14,9 @@
         <button id="button">Go</button>
         <span id="debug">👈 tap Go to begin</span>
     </p>
+    <p>
+        <span id="speed">undefined speed</span>
+    </p>
     <div id="map" style="height: 300px"></div>
     <p id="experiment"></p>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
